feat: quill module installed. create component and list component created. service structure for saving data using fake json created.

--- a/newslyapp/src/app/features/news/components/news-list/news-list.component.html
+++ b/newslyapp/src/app/features/news/components/news-list/news-list.component.html
@@ -1,1 +1,4 @@
-<p>news-list works!</p>
+<div *ngFor="let item of news"  class="content-container">
+  <h1>{{ item.title }}</h1>
+  <div [innerHTML]="item.content" class="content-content"></div>
+</div>
