feat: added global custom scss files.

--- a/newslyapp/src/app/shared/components/location/location.component.html
+++ b/newslyapp/src/app/shared/components/location/location.component.html
@@ -16,4 +16,8 @@
 <div class="theme">
   <app-theme-switcher></app-theme-switcher>
 </div>
+<div class="bg-red width-1200px margin-auto border-radius-12px">
+    <p>Ne Oldu?</p>
+  <app-slider></app-slider>
+</div>
 
