--- a/newslyapp/src/app/shared/components/theme-switcher/theme-switcher.component.html
+++ b/newslyapp/src/app/shared/components/theme-switcher/theme-switcher.component.html
@@ -1,6 +1,6 @@
 <div class="theme-switcher">
   <label class="switch">
-    <input type="checkbox" name="theme" (change)="toggleTheme()" [checked]="isDarkTheme">
+    <input type="checkbox" (change)="toggleTheme()" [checked]="isDarkTheme">
     <span class="slider"></span>
   </label>
   <span class="theme-labels">
