feat: slider and card components have been created, and keen slider has been added.

--- a/newslyapp/src/app/shared/components/location/location.component.html
+++ b/newslyapp/src/app/shared/components/location/location.component.html
@@ -16,8 +16,10 @@
 <div class="theme">
   <app-theme-switcher></app-theme-switcher>
 </div>
-<div class="bg-red width-1200px margin-auto border-radius-12px">
-    <p>Ne Oldu?</p>
+<div class="width-1000px margin-auto">
   <app-slider></app-slider>
+</div>
+<div class="width-1000px margin-auto">
+  <app-card></app-card>
 </div>
 
