--- a/newslyapp/src/styles.scss
+++ b/newslyapp/src/styles.scss
@@ -13,5 +13,6 @@ body {
 @import url('assets/css/_typography.scss');
 @import url('assets/css/_utility.scss');
 @import url('assets/css/color2.scss');
+@import url('assets/css/image.scss');
 
 
