--- a/newslyapp/src/app/shared/components/card/card.component.html
+++ b/newslyapp/src/app/shared/components/card/card.component.html
@@ -1,3 +1,16 @@
-<div class="card">
-    
+<div class="width-full">
+    <ul class="d-flex-wrap justify-content-center p-0 m-0">
+        <li class="width-300px d-block mt-0 mr-35px mb-20px ml-0" *ngFor="let data of data">
+            <div class="theme-div padding-15px border-radius-15px">
+                <div class="width-full height-200px overflow-hidden">
+                    <img class="border-radius-15px width-full height-full object-fit-cover" [src]="data.image">
+                </div>
+                <div class="d-flex justify-content-between font-size-xs font-weight-medium pt-20px letter-spacing-tight text-uppercase">
+                    <span>{{data.author}}</span>
+                    <span>{{data.date}}</span>
+                </div>
+                <p class="font-size-lg font-weight-bold">{{data.description | truncate}}</p>
+            </div>
+        </li>
+    </ul>
 </div>
