feat: add font. slide structure created.

--- a/newslyapp/src/app/shared/components/card/card.component.html
+++ b/newslyapp/src/app/shared/components/card/card.component.html
@@ -1,6 +1,6 @@
 <div class="width-full">
     <ul class="d-flex-wrap justify-content-center p-0 m-0">
-        <li class="width-300px d-block mt-0 mr-35px mb-20px ml-0" *ngFor="let data of data">
+        <li class="width-300px d-block mt-0 mr-35px mb-20px ml-0" *ngFor="let data of slides">
             <div class="theme-div padding-15px border-radius-15px">
                 <div class="width-full height-200px overflow-hidden">
                     <img class="border-radius-15px width-full height-full object-fit-cover" [src]="data.image">
