--- a/newslyapp/src/app/shared/components/location/location.component.html
+++ b/newslyapp/src/app/shared/components/location/location.component.html
@@ -13,13 +13,13 @@
   <button class="btn-warning" (click)="triggerWarningAlert()">Uyarı Bildirimi Göster</button>
   <button class="btn-info" (click)="triggerInfoAlert()">Bilgi Bildirimi Göster</button>
 </div>
-<div class="theme">
+<div class="theme mb-30px">
   <app-theme-switcher></app-theme-switcher>
 </div>
-<div class="width-1000px margin-auto">
+<div class="width-1000px margin-auto theme-div border-radius-15px padding-30px">
   <app-slider></app-slider>
 </div>
-<div class="width-1000px margin-auto">
+<div class="width-1000px margin-auto pt-40px">
   <app-card></app-card>
 </div>
 
