--- a/newslyapp/src/assets/css/_typography.scss
+++ b/newslyapp/src/assets/css/_typography.scss
@@ -95,8 +95,8 @@
 }
 
 // Font Family Classes
-$font-family-primary: 'Arial', sans-serif;
-$font-family-secondary: 'Georgia', serif;
+$font-family-primary: 'Inter', normal;
+$font-family-secondary: 'Inter', normal;
 
 .font-family-primary {
   font-family: $font-family-primary;
