--- a/newslyapp/src/app/shared/components/slider/slider.component.scss
+++ b/newslyapp/src/app/shared/components/slider/slider.component.scss
@@ -3,39 +3,11 @@
   height: 30px;
   top: 30%;
   position: absolute;
+  border-radius: 50%;
+  padding: 10px;
   transform: translateY(-50%);
-  fill: #fff;
   cursor: pointer;
 }
 
-.arrow--left {
-  left: 0;
-}
 
-.arrow--right {
-  right: 0;
-}
 
-.arrow--disabled {
-  display: none;
-}
-.pagination {
-  display: flex;
-  justify-content: center;
-  padding: 10px 0;
-  position: absolute;
-  bottom: 10px;
-  width: 100%;
-
-  span {
-    width: 10px;
-    height: 10px;
-    background-color: #ccc;
-    border-radius: 50%;
-    margin: 0 5px;
-    cursor: pointer;
-    &.active {
-      background-color: #333;
-    }
-  }
-}
