--- a/newslyapp/src/assets/css/_position.scss
+++ b/newslyapp/src/assets/css/_position.scss
@@ -45,3 +45,19 @@ $spacing-values: (
     right: 0;
     bottom: 0;
 }
+
+.top-0 {
+    top: 0;
+  }
+  
+  .bottom-0 {
+    bottom: 0;
+  }
+  
+  .left-0 {
+    left: 0;
+  }
+  
+  .right-0 {
+    right: 0;
+  }
