--- a/newslyapp/src/app/shared/components/header/header.component.html
+++ b/newslyapp/src/app/shared/components/header/header.component.html
@@ -1,1 +1,8 @@
-<p>header works!</p>
+<div class="width-full height-97px d-flex align-items-center justify-content-between">
+    <div>
+        <app-search></app-search>
+    </div>
+    <div>
+        <app-location></app-location>
+    </div>
+</div>
