--- a/newslyapp/src/assets/css/_utility.scss
+++ b/newslyapp/src/assets/css/_utility.scss
@@ -9,6 +9,14 @@ $spacing-values: (
     40px,
     45px,
     50px,
+    55px,
+    60px,
+    65px,
+    70px,
+    75px,
+    80px,
+    90px,
+    100px,
 );
 
 // Mixin for generating spacing classes
