--- a/newslyapp/src/app/features/popular-news/popular-news.component.scss
+++ b/newslyapp/src/app/features/popular-news/popular-news.component.scss
@@ -1,7 +1,7 @@
-.theme-div{
+.popular-card{
     transition: 0.5s;
     &:hover{
-        box-shadow: 4px 6px 10px rgba(0, 0, 0, 0.2);
+        opacity: 0.6;
         transition: 0.5s;
     }
 }
