--- a/newslyapp/src/app/shared/components/footer/footer.component.html
+++ b/newslyapp/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,19 @@
-<p>footer works!</p>
+<div class="width-full mb-40px">
+    <div class="mt-20px letter-spacing-custom-tight font-size-12px line-height-loose font-weight-medium">
+        <div class="mb-5px">
+            <span class="span-hover">Reklam</span>
+            <span class="span-hover">Hakkımızda</span>
+            <span class="span-hover">İletişim</span>
+            <span class="span-hover">Kullanım Koşulları</span>
+        </div>
+        <div class="mb-20px">
+            <span class="span-hover">Gizlilik Politikası</span>
+            <span class="span-hover">© 2024 Newsly</span>
+        </div>
+        <div class="text-align-center">
+            <i class="fa-brands fa-square-github "></i>
+            <i class="fa-brands fa-linkedin "></i>
+            <i class="fa-brands fa-instagram "></i>
+        </div>
+    </div>
+</div>
