--- a/newslyapp/src/app/shared/components/slider/slider.component.html
+++ b/newslyapp/src/app/shared/components/slider/slider.component.html
@@ -1,17 +1,18 @@
 <div class="width-full position-relative">
     <ul class="m-0 p-0">
-        <div class="keen-slider" #sliderRef>
-            <li class="width-300px keen-slider__slide" *ngFor="let data of slides">
-                <div class="padding-25px border-radius-15px">
+        <p class="pl-25px font-size-3xl font-weight-bolder">Ne Oldu?</p>
+        <div class="keen-slider" #sliderRef>   
+            <li class="width-full keen-slider__slide" *ngFor="let data of slides">
+                <div class="margin-25px cursor-pointer">
                     <div class="width-full height-200px overflow-hidden">
-                        <img class="border-radius-15px width-full height-full object-fit-cover" [src]="data.image">
+                        <img class="border-radius-6px width-full height-full object-fit-cover" [src]="data.image">
                     </div>
                     <div
-                        class="d-flex justify-content-between font-size-xs font-weight-medium pt-20px letter-spacing-tight text-uppercase">
-                        <span>{{data.author}}</span>
-                        <span>{{data.date}}</span>
+                        class="d-flex justify-content-between pt-20px letter-spacing-tight text-uppercase">
+                        <span class="color-gray font-weight-semibold font-size-xs">{{data.author}}</span>
+                        <span class="color-gray font-size-xxs font-weight-normal">{{data.date}}</span>
                     </div>
-                    <p class="font-size-lg font-weight-bold">{{data.description | truncate}}</p>
+                    <p class="font-size-lg pt-20px pb-10px font-weight-bold">{{data.description | truncate}}</p>
                 </div>
             </li>
         </div>
