--- a/newslyapp/src/app/features/home/home.component.html
+++ b/newslyapp/src/app/features/home/home.component.html
@@ -1,15 +1,15 @@
 <div>
     <div class="theme-div border-radius-6px padding-30px mb-35px">
-        <app-slider></app-slider>
+        <app-slider [news]="news"></app-slider>
     </div>
     <div class="d-flex">
         <div class="card" style="float: left;">
-            <app-card></app-card>
+            <app-card [news]="news"></app-card>
         </div>
         <div class="popular mb-30px">
             <div style="float: right;">
                 <app-footer></app-footer>
-                <app-popular-news></app-popular-news>
+                <app-popular-news [news]="news"></app-popular-news>
             </div>
         </div>
     </div>
