--- a/newslyapp/src/app/shared/components/layout/layout.component.html
+++ b/newslyapp/src/app/shared/components/layout/layout.component.html
@@ -2,7 +2,7 @@
     <div style="width: 245px;">
         <app-sidebar></app-sidebar>
     </div>
-    <div class="margin-auto max-width-1024px">
+    <div class="margin-auto width-1024px">
         <div class="flex-grow-1">
             <div class="mb-35px">
                 <app-header></app-header>
