--- a/newslyapp/src/app/shared/components/sidebar/sidebar.component.html
+++ b/newslyapp/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,15 +1,17 @@
 <div class="sidebar height-100vh bg-panel m-0 p-0" style="width: 245px;">
     <div class="height-auto margin-auto pt-40px" style="width: 128px;">
-        <img class="width-full height-auto cursor-pointer" src="assets/img/common/logo.png">
+        <img class="width-full height-auto cursor-pointer" src="assets/img/common/logo.png" routerLink="/">
     </div>
     <div class="mt-90px">
         <ul class="m-0 p-0 list-style-none">
-            <li class="sidebar-category cursor-pointer font-weight-bold font-size-sm line-height-tight pl-50px pt-25px pb-25px text-uppercase"
-                *ngFor="let category of categories">
-                <a class="text-decoration-none text-dark-gray" (click)="onCategorySelect(category.name)">
-                    {{ category.name }}
-                  </a>
-            </li>
+            <div *ngFor="let category of categories">
+                <a class="text-decoration-none text-dark-gray font-weight-bold font-size-sm text-uppercase">
+                    <li class="sidebar-category cursor-pointer pl-50px pt-25px pb-25px line-height-tight"
+                        [routerLink]="['/category', category.name.toLowerCase()]" routerLinkActive="active">
+                        {{ category.name }}
+                    </li>
+                </a>
+            </div>
         </ul>
         <div class="mt-80px pl-50px">
             <app-theme-switcher></app-theme-switcher>
