--- a/newslyapp/src/assets/css/color2.scss
+++ b/newslyapp/src/assets/css/color2.scss
@@ -10,6 +10,7 @@ $colors: (
   'dark-gray': #555555,
   'light-gray': #cccccc,
   'panel': #0c0f12,
+  '404' : #12161b,
 );
 
 @mixin generate-background-classes($color-map) {
