--- a/newslyapp/src/app/shared/components/layout/layout.component.html
+++ b/newslyapp/src/app/shared/components/layout/layout.component.html
@@ -7,7 +7,7 @@
             <div class="mb-35px">
                 <app-header></app-header>
             </div>
-            <div>
+            <div class="mb-35px">
                 <router-outlet></router-outlet>
             </div>
         </div>
