--- a/newslyapp/src/app/shared/components/slider/slider.component.html
+++ b/newslyapp/src/app/shared/components/slider/slider.component.html
@@ -12,7 +12,7 @@
                         <span class="color-gray font-weight-semibold font-size-xs">{{news.author}}</span>
                         <span class="color-gray font-size-xxs font-weight-normal">{{news.date}}</span>
                     </div>
-                    <p class="font-size-lg pt-20px pb-10px font-weight-bold">{{news.description | truncate}}</p>
+                    <p class="font-size-lg pt-20px pb-10px font-weight-bold">{{news.title | truncate}}</p>
                 </div>
             </li>
         </div>
