--- a/newslyapp/src/assets/css/color2.scss
+++ b/newslyapp/src/assets/css/color2.scss
@@ -1,7 +1,7 @@
 $colors: (
   'white': #ffffff,
   'black': #000000,
-  'red': #ff0000,
+  'red': #E62C33,
   'green': #00ff00,
   'blue': #0000ff,
   'orange': #ff7d19,
